regler le deprecied